# KIKODO

./: .env.example  Cargo.toml  README.md
src/: lib.rs
src/bot/: bot.rs
src/bot/http/: mod.rs
src/bot/http/structs/: mod.rs
src/cli/: mod.rs
