[package]
name = "kikodo"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
octocrab = "0.47.0"
tokio = { version = "1.48.0", features = ["full"] }
anyhow = "1.0.100"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-native-tls"] }
clap = { version = "4.5.50", features = ["derive", "env"] }
dotenv = "0.15.0"
axum = "0.8.6"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }
